--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
